fix(post): Control wrapping header onto multiple lines
Resolves #102

--- a/src/presenters/Post/post.css
+++ b/src/presenters/Post/post.css
@@ -26,11 +26,7 @@
 
 .head {
   display: flex;
-  justify-content: space-between;
-}
-
-.name {
-  vertical-align: middle;
+  flex-wrap: wrap;
 }
 
 .displayName {
@@ -40,6 +36,11 @@
 
 .displayName .empty {
   margin: 0;
+}
+
+.time {
+  padding-left: 4px;
+  margin-left: auto;
 }
 
 .screenName,
